k8s/applications/web/mastodon/elasticsearch/es-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-es
  namespace: mastodon
  labels:
    app: mastodon-es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodon-es
  template:
    metadata:
      labels:
        app: mastodon-es
    spec:

      securityContext:
        sysctls:
          - name: vm.max_map_count
            value: "262144"

      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:9.1.0
          ports:
            - containerPort: 9200
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: es-data
          persistentVolumeClaim:
            claimName: mastodon-es-pvc
