k8s/applications/web/mastodon/elasticsearch/httproute-es.yaml
# /k8s/applications/web/mastodon/networking/httproute-s3.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon-es
  namespace: mastodon
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - elastic.goingdark.social
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: elasticsearch-master
          port: 5601
